#2340 Update map plotting to address glitchy behavior when selecting entities and histories.